<resources>
    <string name="app_name">AgriNetwork</string>
    <string name="sign_in_text">Đăng nhập</string>
    <string name="register_text">Đăng kí</string>
    <string name="logout_text">Đăng xuất</string>
    <string name="no_account_ask">Chưa có tài khoản?</string>
    <string name="have_account_ask">Đã có tài khoản?</string>
    <string name="or">Hoặc</string>
    <string name="username_label">Tên đăng nhập</string>
    <string name="email_label">Địa chỉ mail</string>
    <string name="first_name_label">Họ</string>
    <string name="last_name_label">Tên</string>
    <string name="user_type_label">Bạn là thành viên</string>
    <string name="province_label">Tỉnh/thành phố</string>
    <string name="phone_label">Số điện thoại</string>
    <string name="password_label">Mật khẩu</string>
    <string name="district_label">Quận/huyện</string>
    <string name="ward_label">Phường/xã</string>
    <string name="no_network">Không có mạng</string>
    <string name="check_network">Kiểm tra kết nối mạng của bạn</string>
    <string name="title_activity_user_feed">UserFeed</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_networks">Kết nối</string>
    <string name="title_add">Thêm</string>
    <string name="title_add_post">Tạo bài</string>
    <string name="title_products">Sản phẩm</string>
    <string name="title_notifications">Thông báo</string>
    <string name="what_thinking">Bạn đang nghĩ gì?</string>
    <string name="pick_image_action">Chọn hình ảnh</string>
    <string name="picked_image_title">Hình ảnh đã chọn</string>
    <string name="profile_user">Trang cá nhân</string>
    <string name="update_user"> Cập nhật thông tin</string>
    <string name="title_update"> Cập nhật</string>
    <string name="hint_search">Tìm kiếm</string>
    <string name="hint_results">Kết quả tìm kiếm</string>
    <string name="add_friend">Thêm bạn</string>
    <string name="remove_friend_rq">Hủy lời mời</string>
    <string name="friended">Bạn bè</string>
    <string name="contact_action">Liên hệ</string>
    <string name="friend_rq_approve">Chấp nhận</string>
    <string name="friend_rq_reject">Từ chối</string>
    <string name="friend_request_question">Chấp nhận lời mời kết bạn?</string>
    <string name="people_may_know">Người có thể bạn quen</string>
    <string name="friend_request">Lời mời kết bạn</string>
    <string name="unfriend_asking">Bạn có chắc muốn hủy kết bạn?</string>
    <string name="accept">Chấp nhận</string>
    <string name="cancel">Từ chối</string>
    <string name="title_location_permission">Truy cập đến vị trí của bạn</string>
    <string name="message_location_permission">Để có được trải nghiệm tốt hơn, vui lòng cung cấp vị trí của bạn</string>
    <string name="explore_more">Khám phá thêm bạn bè</string>
    <string name="view_more">Xem thêm</string>
    <string name="product_categories">Danh mục sản phẩm</string>
    <string name="maybe_interest">Có thể bạn hứng thú</string>
    <string name="for_you">Dành cho bạn</string>
    <string name="from_your_friend">Từ bạn bè</string>
    <string name="near_your_location">Gần nơi bạn sống</string>
    <string name="popular_products">Sản phẩm nổi bật</string>
    <string name="price_from">Từ</string>
    <string name="price_to">Đến</string>
    <string name="price_between">Giá dao động</string>
    <string name="post_request">Đăng yêu cầu</string>
    <string name="product_info">Thông tin sản phẩm</string>
    <string name="result_search_product_by_category">Kết quả tìm kiếm trong:</string>
    <string name="sort_product_by">Sắp xếp sản phẩm theo:</string>
    <string name="sort_product_name">Tên</string>
    <string name="sort_product_view">Lượt xem</string>
    <string name="sort_product_price"> Đơn giá</string>
    <string name="sort_product_date"> Ngày đăng</string>


    <string name="post_title">Bài đăng</string>
    <string name="write_comment_acction_hint">Nhập bình luận</string>
    <string name="empty_comment">Chưa có bình luận nào tại đây</string>
    <string name="empty_post">Chưa có bài đăng nào</string>
    <string name="view_profile">Trang cá nhân</string>
    <string name="add_new_regular_post">Thêm bài đăng mới</string>
    <string name="add_new_product">Thêm sản phẩm mới</string>
    <string name="add_new_planning">Thêm kế hoạch sản xuất</string>
    <string name="add_new_request_product">Tạo bài đăng nhu cầu thu mua</string>
    <string name="delete_post">Xóa bài đăng</string>
    <string name="edit_post">Chỉnh sửa bài đăng</string>
    <string name="full_name">Họ và tên</string>
    <string name="province_name">Tỉnh</string>
    <string name="user_type">Loại người dùng</string>

    <string name="choice_tag">Chọn thẻ cho bài đăng</string>
    <string name="cancel_dialog">Hủy</string>
    <string name="btn_add">Thêm</string>
    <string name="tag_item">Đây là một thẻ trong bài đăng</string>
    <string name="picked_tag">Thẻ đã chọn cho bài đăng</string>
    <string name="btn_add_tag">Thêm thẻ</string>


    <string name="detail_btn">Chi tiết</string>
    <string name="edit_btn">Chỉnh Sửa</string>
    <string name="recommend_users_tab_title">Gợi ý</string>
    <string name="following_users_tab_title">Đang theo dõi</string>
    <string name="follower_tab_title">Người theo dõi</string>
    <string name="following">Đang theo dõi</string>
    <string name="follower">Người theo dõi</string>
    <string name="follow">Theo dõi</string>
    <string name="no_recommended_user">Không tìm thấy kết quả nào, quay lại sau nhé :3</string>
    <string name="no_users_found">Không tìm thấy kết quả nào</string>
    <string name="recommend_user_demand">Người dùng có nhu cầu</string>
    <string name="contact_user_demand">Liên hệ</string>

    <string name="email_required">Địa chỉ email không thể để trống</string>
    <string name="phone_required">Sđt không thể để trống</string>
    <string name="last_name_require">Tên không thể để trống</string>
    <string name="first_name_required">Họ không thể để trống</string>
    <string name="password_required">Mật khẩu không thể để trống</string>
    <string name="usertype_require">Chọn loại thành viên</string>
    <string name="province_required">Chọn tỉnh/thành phố</string>

    <string name="title_add_product">Thêm sản phẩm</string>
    <string name="hint_product_name">Tên sản phẩm</string>
    <string name="hint_category">Loại sản phẩm</string>
    <string name="hint_quantity">Số lượng</string>
    <string name="hint_price">Đơn giá| VND</string>
    <string name="hint_unit">Đơn vị</string>
    <string name="text_add_img">Thêm hình ảnh</string>
    <string name="checkbox_add_story">Bạn có muốn thêm vào bản tin của mọi người</string>
    <string name="btn_add_product">Thêm sản phẩm</string>
    <string name="product_name_required">Vui lòng nhập tên sản phẩm</string>
    <string name="category_required">Chọn loại sản phẩm</string>
    <string name="quantity_required">Vui lòng nhập số lượng</string>
    <string name="price_required">Vui lòng nhập đơn giá</string>
    <string name="unit_required">Chọn đơn vị</string>

    <string name="title_product_detail">Chi tiết sản phẩm</string>
    <string name="title_quantity">Số lượng: </string>
    <string name="title_price">Giá:</string>
    <string name="date_create">Ngày đăng:</string>
    <string name="btn_contact">Liên hệ người cung cấp</string>
    <string name="productsFromOwn">Từ người bán</string>
    <string name="productsRelated">Sản phẩm tương tự</string>

    <string name="tab_menu_own">Menu</string>
    <string name="tab_own_product">Sản phẩm </string>
    <string name="tab_own_post">Bài viết</string>

    <string name="tab_own">Trang của tôi</string>
    <string name="tab_menu_info_detail">Chi tiết thông tin</string>
    <string name="text_no_post_own">Hiện bạn chưa có bài viết nào</string>
    <string name="text_no_product_own">Hiện bạn chưa có đăng sản phẩm nào</string>

    <string name="plan">Kế hoạch</string>
    <string name="needed">Nhu cầu</string>
    <string name="close">Đóng</string>

    <string name="plan.creation.submit.btn.next">Tiếp theo</string>
    <string name="plan.creation.step.1.title">Tạo kế hoạch</string>
    <string name="plan.creation.step.1.label.name">Tên kế hoạch</string>
    <string name="plan.creation.step.1.label.fromDate">Từ ngày</string>
    <string name="plan.creation.step.1.label.toDate">Đến ngày</string>
    <string name="plan.creation.step.2.title">Giai đoạn sản xuất</string>
    <string name="plan.creation.step.2.sample_product">Sản phẩm mẫu dự kiến thu được</string>
    <string name="plan.creation.step.2.plan_detail.name">Tên giai đoạn</string>
    <string name="plan.creation.step.2.add_plan_detail">Thêm giai đoạn</string>
    <string name="plan.creation.step.2.add_needed">Thêm nhu cầu</string>
    <string name="plan.creation.step.3.title">Thành quả</string>
    <string name="plan.creation.step.next">Tiếp theo</string>
    <string name="plan.creation.step.prev">Trở về</string>
    <string name="plan.creation.step.complete">Xong</string>
    <string name="plan.creation.sample.step.1.title">Chọn mẫu</string>
    <string name="plan.creation.sample.step.1.startDate.label">Ngày bắt đầu</string>
    <string name="plan.creation.sample.step.1.pickSample.label">Mẫu kế hoạch</string>
    <string name="plan.creation.sample.step.2.title">Thông tin kế hoạch</string>

    <string name="plan.detail.title">Kế hoạch sản xuất</string>
    <string name="plan.detail.progress">Tiến trình</string>
    <string name="plan.detail.intent.harvest">Thành phẩm dự kiến</string>

    <string name="products.view.title">Danh sách sản phẩm</string>
    <string name="products.navigation.toggler">Mở</string>
    <string name="products.navigation.close">Đóng</string>

    <string name="dialog.pick_create_plan.title">Chọn nguồn tạo kế hoạch sản xuất</string>
    <string name="dialog.pick_create_plan.my_source">Tạo mới hoàn toàn</string>
    <string name="dialog.pick_create_plan.from_sample">Từ mẫu sẵn</string>
    <string name="dialog.pick_create_prod_method.title">Chọn phương pháp tạo sản phẩm</string>
    <string name="dialog.pick_create_prod_method.my_source">Tạo mới hoàn toàn</string>
    <string name="dialog.pick_create_prod_method.from_sample">Từ mẫu sẵn</string>
    <string name="dialog.action.done">Xong</string>
    <string name="title_activity_create_plan_from_sample">CreatePlanFromSampleActivity</string>


</resources>