<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_networks"
        android:icon="@drawable/ic_peoples"
        android:title="@string/title_networks" />

    <item
        android:id="@+id/navigation_add_post"
        android:title=""
        />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_products"
        />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_bell"
        android:title="@string/title_notifications" />

</menu>