<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/profile_user" />


    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/avatar_profile"
            android:layout_width="99dp"
            android:layout_height="91dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/avatar_placeholder" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="193dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar_profile"
            android:text="@string/full_name" />

        <TextView
            android:id="@+id/province"
            android:layout_width="193dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:text="@string/province_name" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="193dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/province"
            android:text="@string/phone_label" />

        <TextView
            android:id="@+id/email"
            android:layout_width="193dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:layout_below="@+id/contact"
            />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_btn"
            android:layout_toRightOf="@+id/contact"
            android:layout_below="@+id/user_name"
            android:layout_marginLeft="80dp"

            />



    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>