<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_user"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/avatar_placeholder"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />

            <TextView
                android:id="@+id/province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province_name" />

            <TextView
                android:id="@+id/user_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_type" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="88dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:text="@string/detail_btn">

        </Button>


    </LinearLayout>


</LinearLayout>