<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:gravity="center"
        android:background="@color/green_700"
        android:text="@string/choice_tag"
        />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        app:startIconDrawable="@drawable/ic_search"
        app:defaultQueryHint="@string/hint_search"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/post_tag_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="450dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:background="@color/gray_400"
            android:text="@string/cancel_dialog"/>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:background="@color/green_700"
            android:text="@string/btn_add"/>


    </LinearLayout>


</LinearLayout>