<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/activity_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_title"
        android:id="@+id/sign_in_form"
        >

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_label" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:id="@+id/edit_text_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"
            android:id="@+id/login_btn"
            android:text="@string/sign_in_text"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@id/sign_in_form"
        android:id="@+id/or_divide"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/gg_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/or_divide"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/no_account_ask_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_ask"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:layout_marginStart="5dp"
            android:textColor="@color/blue_500"
            android:id="@+id/move_to_register"
            />
    </LinearLayout>

</RelativeLayout>